# INSO_TFG

./: .gitignore  README.md  integration_test.py
attnspectra/: README.md  pyproject.toml
attnspectra/docs/: quickstart.md
attnspectra/docs/concepts/: capture.md  metrics.md  viz.md
attnspectra/src/attnspectra/: __init__.py
attnspectra/src/attnspectra/adapters/: __init__.py  base.py  custom_gpt.py  hf.py
attnspectra/src/attnspectra/analysis/: __init__.py  aggregation.py  attention.py  metrics.py  spectra.py
attnspectra/src/attnspectra/capture/: __init__.py  api.py  normalize.py  selectors.py
attnspectra/src/attnspectra/config/: __init__.py  capture.py  metrics.py  plotting.py
attnspectra/src/attnspectra/core/: __init__.py  device.py  seeds.py  types.py  validate.py
attnspectra/src/attnspectra/storage/: __init__.py  formats.py  load.py  save.py
attnspectra/src/attnspectra/transforms/: __init__.py  token_perturbations.py
attnspectra/src/attnspectra/viz/: __init__.py  attention_maps.py  heatmaps.py  lines.py  tokens.py
attnspectra/tests/: test_normalize_attn.py  test_perturbations.py  test_serialization.py  test_spectra.py
experiments/models/: gpt_model.py
experiments/notebooks/: 00_training.ipynb  01_analysis_pipeline.ipynb
experiments/tokenizer_mix_es/: merges.txt  tokenizer.json  vocab.json
