[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attnspectra"
version = "0.1.0"
description = "Extraction, spectral analysis and visualization of transformer attention matrices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]

dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
hf = ["transformers>=4.38"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "mypy",
    "ruff",
]
all = ["attnspectra[hf,dev]"]

[project.scripts]
attnspectra = "attnspectra.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"